# hybrid-sensor-sim

./: .gitignore  README.md  pyproject.toml
configs/: hybrid_sensor_sim.example.json  hybrid_sensor_sim.helios_demo.json  hybrid_sensor_sim.helios_docker.auto_extrinsics.json  hybrid_sensor_sim.helios_docker.json  hybrid_sensor_sim.survey_mapping_demo.json  renderer_backend_smoke.awsim.example.json  renderer_backend_smoke.awsim.local.docker.example.json  renderer_backend_smoke.awsim.local.example.json  renderer_backend_smoke.carla.example.json  renderer_backend_smoke.carla.local.docker.example.json  renderer_backend_smoke.carla.local.example.json
docker/: helios-cli.Dockerfile
docs/: architecture_guide.md  autonomy_e2e_history_integration.md  autonomy_e2e_migration_master_plan.md  first_run_guide.md  hybrid_helios_plan.md  linux_closed_loop_handoff.md  p_sim_engine_migration_audit.md  sensor_sim_master_plan.md
scripts/: acquire_renderer_backend_package.py  discover_renderer_backend_local_env.py  docker_build_helios.sh  docker_build_helios_cli.sh  renderer_launch_awsim.sh  renderer_launch_carla.sh  run_autonomy_e2e_history_guard.py  run_autonomy_e2e_history_query.py  run_autonomy_e2e_history_refresh.py  run_autonomy_e2e_history_report.py  run_autoware_pipeline_bridge.py  run_control_plane_api.py  run_hybrid_docker_demo.sh  run_log_replay.py  run_log_scene_augment.py  run_map_convert.py  run_map_route.py  run_map_validate.py  run_object_sim.py  run_renderer_backend_linux_handoff.py  run_renderer_backend_linux_handoff_docker.py  run_renderer_backend_smoke.py  (+20 more)
(+192 files in other folders)
